in case of multiple scan conditions only matched record is returned that comply every condition